Header spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -298,6 +298,10 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.companyname {
   display: inline-block;
   vertical-align: middle;
+  margin-right: 10px;
+  @media @mobile {
+    margin-right: 0;
+  }
 }
 
 .companyname a:hover {
